update  pom and allure work